--- a/TODO
+++ b/TODO
@@ -1,12 +1,16 @@
 # Backend 
-Upload ảnh 
-Chỉnh sửa thông tin người dùng
-Lấy ra toàn bộ thông tin người dùng trong 1 group
-Cập nhật thông tin user, có phải gửi socket hay không?
-Dasboard
+Tìm kiếm
+Lấy ra toàn bộ thông tin người dùng trong 1 group, thông tin người dùng theo listId
+Huỷ yêu cầu kết bạn, kết bạn 
+Upload ảnh  
+Chỉnh sửa thông tin người dùng: PUT api/user/change-info
+Chỉnh sửa thông tin người dùng: PUT api/user/change-password
+Thoát khỏi group
+Cập nhật thông tin user, phải có socket (bạn bè đang online, đến tất cả group)
 Cập nhật tên group => gửi socket
-Reply tin nhắn
-Gỡ tin nhắn hay xoá? Gỡ sẽ phải gửi socket để cập nhật tin nhắn reply tin nhắn bị gỡ (giống messenger)
+; Reply tin nhắn
+; Gỡ tin nhắn hay xoá? Gỡ sẽ phải gửi socket để cập nhật tin nhắn reply tin nhắn bị gỡ (giống messenger)
+Dasboard
 # Frontend
 Dasboard
 Khi lấy tin list tin nhắn về, chạy lại 1 hàm getGroupMessage để nhóm message gần nhau có cùng user thành 1 group, xử lý giao diện đó 
