feat: update user

--- a/TODO
+++ b/TODO
@@ -1,1 +1,5 @@
-Nếu thêm tin nhắn mới, kiểm tra xem có tồn tại group đấy chưa, nếu chưa thêm group đấy vào đầu
+cập nhật thông tin người dùng
+upload image
+tin nhắn có hình ảnh và emoij
+cập nhật group, settings
+dashboard
