--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-cập nhật thông tin người dùng
-upload image
-tin nhắn có hình ảnh và emoij
-cập nhật group, settings
-dashboard
+[x] cập nhật thông tin người dùng
+[x] upload image
+[] cập nhật group, settings
+[] tin nhắn có hình ảnh và emoij
+[] dashboard
