feat: add member

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 [x] cập nhật thông tin người dùng
 [x] upload image
-[] cập nhật group, settings
+[x] cập nhật group, settings
+[] Thêm thành viên vào nhóm
 [] tin nhắn có hình ảnh và emoij
 [] dashboard
+[] Thêm settings cho đa dạng
