--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 [x] cập nhật thông tin người dùng
 [x] upload image
 [x] cập nhật group, settings
-[] Thêm thành viên vào nhóm
-[] tin nhắn có hình ảnh và emoij
+[x] Thêm thành viên vào nhóm
+[x] tin nhắn có hình ảnh và emoij
 [] dashboard
 [] Thêm settings cho đa dạng
